--- a/teleSus/package.json
+++ b/teleSus/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-community/datetimepicker": "^8.1.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/stack": "^6.3.29",
     "calendar": "^0.1.1",
     "expo": "~51.0.10",
